styles/pageheader.module.less
@import './variables.module.less';

.header {
  width: 100%;
  height: 60px;
  padding: 16px;
  background: var(--cr-primary-bg);
  color: var(--cr-primary-text);

  .title {
    display: inline;
    margin-right: 8px;
    vertical-align: initial;
    font-size: 20px;
    line-height: 28px;
    font-weight: bold;
    color: var(--cr-primary-text);
  }

  .tooltip {
    color: red;
  }

  .explainer {
    padding: 5px;
    background-color: var(--cr-secondary-bg);
    border-radius: 14px;
    color: var(--cr-primary-tooltip);
  }
}

@media (max-width: @screen-sm) {
  .modal {
    :global(.ant-modal, .ant-modal-content) {
      height: 100vh;
      width: 100vw !important;
      margin: 0;
      top: 0 !important;
    }

    :global(.ant-modal-body) {
      height: calc(100vh - 110px);
    }
  }
}

